@@ -405,7 +405,7 @@
 	(cnum (nth 3 session))
 	(i 0)
 	(w3m-async-exec (and w3m-async-exec-with-many-urls w3m-async-exec))
-	url cbuf pos history)
+	url cbuf buf pos history)
     (message "Session goto(%s)..." title)
     (while (setq url (car urls))
       (setq urls (cdr urls))
@@ -414,9 +414,12 @@
 	      history (nth 2 url)
 	      url     (nth 0 url)))
       (w3m-goto-url-new-session url)
-      (setq cbuf (car (nreverse (w3m-list-buffers))))
-      (when (and cbuf pos history)
-	(set-buffer cbuf)
+      (setq buf (car (nreverse (w3m-list-buffers))))
+      (when (or (and (numberp cnum) (= cnum i))
+		(and (not cnum) (= i 0)))
+	(setq cbuf buf))
+      (when (and buf pos history)
+	(set-buffer buf)
 	(setq w3m-history-flat history)
 	(w3m-history-tree pos))
       (setq i (1+ i)))
